plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.0-alpha.8'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

// Minecraft 26.1.x: game is unobfuscated — Java 21+ required, no Yarn, no remapping.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.fabricmc.net/' }
}

dependencies {
    // Minecraft — fabric-loom adds it automatically via 'minecraft'
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    // Use standard 'implementation' for unobfuscated 26.1.x builds (no remapping).
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

// Standard jar task replaces remapJar for 26.1.x (no obfuscation = no remap step).
tasks.named('jar') {
    from('LICENSE') {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.encoding = 'UTF-8'
}

processResources {
    inputs.property 'version', project.version

    filesMatching('fabric.mod.json') {
        expand 'version': project.version
    }
}
